[gd_scene load_steps=9 format=2]

[ext_resource path="res://game3.gd" type="Script" id=1]
[ext_resource path="res://resource/bg.png" type="Texture" id=2]
[ext_resource path="res://resource/Unique.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resource/cards/spade.jpg" type="Texture" id=4]
[ext_resource path="res://resource/cards/heart.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="game3" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 601.52, 350.353 )
scale = Vector2( 1.49112, 1.16283 )
texture = ExtResource( 2 )

[node name="balance" type="Label" parent="."]
margin_left = 724.335
margin_top = 63.9521
margin_right = 788.335
margin_bottom = 121.952
custom_fonts/font = SubResource( 1 )
text = "bal"

[node name="pussy" type="Label" parent="."]
margin_left = 80.1877
margin_top = 82.704
margin_right = 144.188
margin_bottom = 140.704
custom_fonts/font = SubResource( 1 )
text = "pussy"

[node name="dtype_hand" type="Label" parent="."]
margin_left = 488.619
margin_top = 235.331
margin_right = 769.619
margin_bottom = 293.331
custom_fonts/font = SubResource( 1 )
text = "dealer type hand"

[node name="ptype_hand" type="Label" parent="."]
margin_left = 493.25
margin_top = 336.075
margin_right = 772.25
margin_bottom = 394.075
custom_fonts/font = SubResource( 1 )
text = "player type hand"

[node name="betnum" type="LineEdit" parent="."]
margin_left = 791.721
margin_top = 254.257
margin_right = 1007.72
margin_bottom = 386.257

[node name="bet" type="Button" parent="."]
margin_left = 997.215
margin_top = 477.023
margin_right = 1078.21
margin_bottom = 541.023
custom_fonts/font = SubResource( 2 )
text = "Bet"

[node name="discard" type="Button" parent="."]
margin_left = 790.001
margin_top = 472.706
margin_right = 965.001
margin_bottom = 536.706
custom_fonts/font = SubResource( 2 )
text = "Discard"

[node name="fold" type="Button" parent="."]
margin_left = 792.16
margin_top = 472.706
margin_right = 967.16
margin_bottom = 536.706
custom_fonts/font = SubResource( 2 )
text = "Fold"

[node name="stand" type="Button" parent="."]
margin_left = 584.946
margin_top = 472.706
margin_right = 759.946
margin_bottom = 536.706
custom_fonts/font = SubResource( 2 )
text = "Stand"

[node name="exit" type="Button" parent="."]
margin_left = 960.0
margin_top = 64.0
margin_right = 1053.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "X"

[node name="restart" type="Button" parent="."]
margin_left = 841.0
margin_top = 64.0
margin_right = 931.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "O"

[node name="c1" type="CheckBox" parent="."]
margin_left = 52.647
margin_top = 464.076
margin_right = 103.647
margin_bottom = 530.076
rect_scale = Vector2( 1.5, 1.5 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="c2" type="CheckBox" parent="."]
margin_left = 132.737
margin_top = 465.254
margin_right = 184.737
margin_bottom = 531.254
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="c3" type="CheckBox" parent="."]
margin_left = 224.762
margin_top = 463.615
margin_right = 277.762
margin_bottom = 529.615
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "3"

[node name="c4" type="CheckBox" parent="."]
margin_left = 311.153
margin_top = 465.254
margin_right = 363.153
margin_bottom = 531.254
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "4"

[node name="c5" type="CheckBox" parent="."]
margin_left = 391.911
margin_top = 464.076
margin_right = 442.911
margin_bottom = 530.076
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "5"

[node name="pcard1" type="Sprite" parent="."]
position = Vector2( 70.3753, 366.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 4 )

[node name="pcard2" type="Sprite" parent="."]
position = Vector2( 159.069, 366.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 4 )

[node name="pcard3" type="Sprite" parent="."]
position = Vector2( 249.651, 366.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 4 )

[node name="pcard4" type="Sprite" parent="."]
position = Vector2( 342.119, 366.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 4 )

[node name="pcard5" type="Sprite" parent="."]
position = Vector2( 432.7, 366.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 4 )

[node name="dcard1" type="Sprite" parent="."]
position = Vector2( 70.3753, 259.144 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 5 )

[node name="dcard2" type="Sprite" parent="."]
position = Vector2( 159.069, 262.918 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 5 )

[node name="dcard3" type="Sprite" parent="."]
position = Vector2( 249.651, 264.805 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 5 )

[node name="dcard4" type="Sprite" parent="."]
position = Vector2( 340.232, 264.805 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 5 )

[node name="dcard5" type="Sprite" parent="."]
position = Vector2( 432.7, 264.805 )
scale = Vector2( 0.197979, 0.186447 )
texture = ExtResource( 5 )

[node name="debug" type="Sprite" parent="."]
visible = false
position = Vector2( 601.52, 350.353 )
scale = Vector2( 1.49112, 1.16283 )
texture = ExtResource( 2 )

[node name="txt" type="ScrollContainer" parent="debug"]
margin_left = -367.0
margin_top = -262.0
margin_right = 375.0
margin_bottom = 268.0

[node name="txt" type="Label" parent="debug/txt"]
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
[connection signal="pressed" from="bet" to="." method="_on_bet_pressed"]
[connection signal="pressed" from="discard" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="fold" to="." method="_on_fold_pressed"]
[connection signal="pressed" from="stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
